crates/rlf-macros/tests/fail/arity_mismatch.rs
use rlf::rlf;

rlf! {
    cards($n) = "{$n} cards";
    bad($a, $b) = "{cards($a, $b)}";
}

fn main() {}
